# motadata-apm-custom-instrumentation-python

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
src/motadata/apm/: __init__.py  custom_instrumentation.py
